# clobber

./: .env.sample  .gitignore  .pre-commit-config.yaml  MODAL_TRAINING.md  README.md  baseline_runner.py  clone_repos.sh  data_pipeline.py  grpo_trainer.py  hello.py  modal_baseline_qwen.py  modal_grpo.py  modal_setup.sh  pyproject.toml  tool_schema.py  verifier.py
data/: baseline_results.csv  baseline_results_test.csv  filtered_prs.jsonl  filtered_prs_large.jsonl  filtered_prs_v2.jsonl  grpo_prompts.jsonl  grpo_prompts_modal.jsonl  grpo_prompts_v2.jsonl  raw_prs.jsonl  raw_prs_large.jsonl  raw_prs_v2.jsonl
data/sample/: baseline_results_sample.csv  filtered_prs_sample.jsonl  grpo_prompts_sample.jsonl  raw_prs_sample.jsonl
tests/: __init__.py  test_verifier.py
