[project]
name = "clobber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "deptry>=0.23.1",
    "mutmut>=3.3.1",
    "pydeps>=3.0.1",
    "pyright>=1.1.405",
    "pytest-testmon>=2.1.3",
    "pytest-xdist>=3.8.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "trl>=0.23.0",
    "freezegun>=1.5.5",
]
